# scoopie

./: Cargo.toml  README.md  build.rs  rust-toolchain.toml  rustfmt.toml
.github/workflows/: build.yml  rust.yml
src/: bucket.rs  cache.rs  cat.rs  cleanup.rs  config.rs  database.rs  download.rs  error.rs  info.rs  init.rs  install.rs  lib.rs  list.rs  locate.rs  main.rs  nuke.rs  prefix.rs  query.rs  remove.rs  search.rs  shim.rs  status.rs  sync.rs  uninstall.rs  update.rs  utils.rs  which.rs
src/bucket/: data.rs  manifest.rs  mod.rs
src/commands/: info.rs  init.rs  install.rs  list.rs  locate.rs  mod.rs  nuke.rs  prelude.rs  query.rs  remove.rs
src/core/: bucket.rs  config.rs  data.rs  download.rs  manifest.rs  mod.rs  verify.rs
src/core/buckets/: manifest.rs  metadata.rs  mod.rs  query.rs  sync.rs
src/core/download/: downloader.rs  mod.rs  verify.rs
src/core/install/: extractor.rs  mod.rs
src/install/: db.rs  download.rs  mod.rs  sync.rs  verify.rs
src/utils/: env.rs  env_var.rs  mod.rs  pwsh.rs  tmpdir.rs
static/: README.md
