[package]
name = "scoopie"
description = "Your favorite package manager"
version = "0.1.0"
authors = ["Rahul <basicfunc@gmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/basicfunc/scoopie"
license-file = "LICENSE"
keywords = ["package", "package-manager"]
categories = ["command-line-utilities"]

[dependencies]
# For command line parsing
argh = "0.1.10"

# To compute digests
sha2 = "0.10.7"
sha1 = "0.10.5"
md-5 = "0.10.5"
digest = "0.10.7"
hex = "0.4.3"

# For parllel computing
rayon = "1.7.0"

# To clone buckets from remote
git2 = "0.17.2"

# To query through buckets
regex-lite = "0.1.0"
tokio = { version = "1.29.1", features = ["rt"] }

# For de/serialization
serde = { version = "1.0.164", features = ["serde_derive"] }
serde_json = "1.0.99"
url = { version = "2.4.0", features = ["serde"] }

# To store files temporarily
tempfile = "3.6.0"

# For error handling
thiserror = "1.0.41"

# Used to download packages from remote
trauma = "2.2.3"

# To manipulate registries for current user
winreg = "0.50.0"
reqwest = { version = "0.11.18", features = ["blocking"] }
