[package]
name = "scoopie"
description = "Your favorite package manager"
version = "0.1.0"
authors = ["Rahul <basicfunc@gmail.com>"]
edition = "2021"
readme = "README.md"
repository = "https://github.com/basicfunc/scoopie"
license-file = "LICENSE"
keywords = ["package", "package-manager"]
categories = ["command-line-utilities"]

[dependencies]
# For command line parsing
argh = "0.1.10"

# To compute digests
sha2 = "0.10.7"
sha1 = "0.10.5"
md-5 = "0.10.5"
digest = "0.10.7"
hex = "0.4.3"

# For parllel computing
rayon = "1.7.0"

# For cloning git repositories
git2 = "0.18.0"

# To query through buckets
regex-lite = "0.1.0"

# For de/serialization
serde = { version = "1.0.164", features = ["serde_derive"] }
serde_json = "1.0.99"
url = { version = "2.4.0", features = ["serde"] }

# For error handling
thiserror = "1.0.41"

# To download packages from remote
ureq = "2.7.1"

# To show spinners instead of waiting
spinoff = { version = "0.8.0", features = ["dots"] }

# To shows colors in terminal
colorized = "1.0.0"

# To manipulate registries for current user
winreg = "0.50.0"
